--- a/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
@@ -22,6 +22,12 @@
     },
     "subnet2Name": {
       "value": "<%= @subnet2Name %>"
+    },
+    "adminUsername": {
+      "value": "<%= @adminUsername %>"
+    },
+    "adminPassword": {
+      "value": "<%= @adminPassword %>"
     }
   }
 }
