--- a/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
@@ -23,11 +23,11 @@
     "subnet2Name": {
       "value": "<%= @subnet2Name %>"
     },
-    "adminUsername": {
-      "value": "<%= @adminUsername %>"
+    "sshUserName": {
+      "value": "<%= @sshUserName %>"
     },
-    "adminPassword": {
-      "value": "<%= @adminPassword %>"
+    "sshPassword": {
+      "value": "<%= @sshPassword %>"
     }
   }
 }
