Changing osProfile in sqlserver template to make it work

--- a/cookbooks/azure/templates/default/sqlserver.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.json.erb
@@ -80,10 +80,8 @@
           ]
         },
         "osProfile": {
-          "linuxOperatingSystemProfile": {
-            "username": "[parameters('sshUserName')]",
-            "password": "[parameters('sshPassword')]"
-          },          
+          "adminUsername": "[parameters('sshUserName')]",
+          "adminPassword": "[parameters('sshPassword')]"
           "computerName": "[parameters('sqlvirtualMachinesname')]",
           "windowsConfiguration": {
             "provisionVMAgent": true,
