Fixing template syntax error

--- a/cookbooks/azure/templates/default/sqlserver.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.json.erb
@@ -81,7 +81,7 @@
         },
         "osProfile": {
           "adminUsername": "[parameters('sshUserName')]",
-          "adminPassword": "[parameters('sshPassword')]"
+          "adminPassword": "[parameters('sshPassword')]",
           "computerName": "[parameters('sqlvirtualMachinesname')]",
           "windowsConfiguration": {
             "provisionVMAgent": true,
