Fixing syntax error

--- a/cookbooks/azure/templates/default/sqlserver.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.json.erb
@@ -80,10 +80,10 @@
           ]
         },
         "osProfile": {
-          "adminUsername": "[parameters('sshUserName')]",
-          "adminPassword": "[parameters('sshPassword')]",
-          "computerName": "[parameters('sqlvirtualMachinesname')]",
-          "windowsConfiguration": {
+          "AdminUsername": "[parameters('sshUserName')]",
+          "AdminPassword": "[parameters('sshPassword')]",
+          "ComputerName": "[parameters('sqlvirtualMachinesname')]",
+          "WindowsConfiguration": {
             "provisionVMAgent": true,
             "enableAutomaticUpdates": true
           },
