Putting storageAccount variables into template

--- a/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
@@ -40,6 +40,9 @@
     },
     "subnet1Name": {
       "value": "<%= @subnet1Name %>"
+    },
+    "storageAccount": {
+      "value": "<%= @storageAccount %>"
     }
   }
 }
