Updating variable return name

--- a/cookbooks/azure/templates/default/separatedhdi1.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.json.erb
@@ -268,8 +268,8 @@
                 }
               },
               "virtualNetworkProfile": {
-                "id": "[concat('/subscriptions/',subscription().subscription-id,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
-                "subnet": "[concat('/subscriptions/',subscription().subscription-id,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
+                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
+                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
               },
               "scriptActions": []
             },
@@ -287,8 +287,8 @@
                 }
               },
               "virtualNetworkProfile": {
-                "id": "[concat('/subscriptions/',subscription().subscription-id,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
-                "subnet": "[concat('/subscriptions/',subscription().subscription-id,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
+                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
+                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
               },
               "scriptActions": []
             },
@@ -306,8 +306,8 @@
                 }
               },
               "virtualNetworkProfile": {
-                "id": "[concat('/subscriptions/',subscription().subscription-id,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
-                "subnet": "[concat('/subscriptions/',subscription().subscription-id,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
+                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
+                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
               },
               "scriptActions": []
             }
