Updating clusterKind parameter

--- a/cookbooks/azure/templates/default/separatedhdi1.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.json.erb
@@ -219,7 +219,7 @@
         "osType": "Linux",
         "tier": "standard",
         "clusterDefinition": {
-          "kind": "[parameters('clusterKind')]",
+          "kind": "[parameters('clusterType')]",
           "configurations": {
             "gateway": {
               "restAuthCredential.isEnabled": true,
