Fixing sqlserver and spearatehdi1 template syntax error

--- a/cookbooks/azure/templates/default/sqlserver.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.json.erb
@@ -29,6 +29,14 @@
     "subnet2Name": {
       "defaultValue": "subnet220170503000000",
       "type": "String"
+    },
+    "adminUsername": {
+      "defaultValue": "admintest",
+      "type": "String"
+    },
+    "adminPassword": {
+      "defaultValue": "Kyligence2016",
+      "type": "String"
     }
   },
   "variables": {},
@@ -44,6 +52,8 @@
         },
         "osProfile": {
           "computerName": "[parameters('sqlvirtualMachinesname')]",
+          "adminUsername": "[parameters('adminUsername')]",
+          "adminPassword": "[parameters('adminPassword')]"
           "WindowsConfiguration": {
             "provisionVMAgent": true,
             "enableAutomaticUpdates": true
