--- a/cookbooks/azure/templates/default/separatedhdi1.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.json.erb
@@ -27,6 +27,12 @@
         "description": "The password must be at least 10 characters in length and must contain at least one digit, one non-alphanumeric character, and one upper or lower case letter."
       }
     },
+    "containerName": {
+      "type": "string",
+      "metadata": {
+        "description": "Specify container name."
+      }
+    },
     "location": {
       "type": "string",
       "defaultValue": "chinaeast",
