--- a/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
@@ -14,6 +14,9 @@
     "clusterLoginPassword": {
       "value": "<%= @clusterLoginPassword %>"
     },
+    "containerName": {
+      "value": "<%= @containerName %>"
+    },
     "location": {
       "value": "<%= @location %>"
     },
