Update resourceGroupName variable to be name

--- a/cookbooks/azure/templates/default/separatedhdi1.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.json.erb
@@ -274,8 +274,8 @@
                 }
               },
               "virtualNetworkProfile": {
-                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
-                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
+                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
+                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
               },
               "scriptActions": []
             },
@@ -293,8 +293,8 @@
                 }
               },
               "virtualNetworkProfile": {
-                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
-                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
+                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
+                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
               },
               "scriptActions": []
             },
@@ -312,8 +312,8 @@
                 }
               },
               "virtualNetworkProfile": {
-                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
-                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().resourceGroupName,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
+                "id": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'))]",
+                "subnet": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'providers/Microsoft.Network/virtualNetworks/',parameters('vnetName'),'/subnets/',parameters('subnet1Name'))]"
               },
               "scriptActions": []
             }
