Updating edgeNodesize input parameter in ARM template

--- a/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
@@ -17,6 +17,9 @@
     "containerName": {
       "value": "<%= @containerName %>"
     },
+    "edgeNodeSize": {
+      "value": "<%= @edgeNodeSize %>"
+    },
     "location": {
       "value": "<%= @location %>"
     },
