--- a/cookbooks/azure/templates/default/separatedhdi1.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.json.erb
@@ -100,6 +100,25 @@
         "description": "The type of the HDInsight cluster to create."
       }
     },
+    "edgeNodeSize": {
+      "type": "string",
+      "metadata": {
+        "description": "Size of the edge node that hosts the application"
+      },
+      "defaultValue": "Standard_D3_V2",
+      "allowedValues": [
+        "Standard_A1",
+        "Standard_A2",
+        "Standard_A3",
+        "Standard_A4",
+        "Standard_D1_V2",
+        "Standard_D2_V2",
+        "Standard_D3",
+        "Standard_D4",
+        "Standard_D3_V2",
+        "Standard_D4_V2"
+      ]
+    },
     "sshUserName": {
       "type": "string",
       "defaultValue": "sshuser",
