Putting metastore names into template

--- a/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.parameters.json.erb
@@ -23,6 +23,9 @@
     "location": {
       "value": "<%= @location %>"
     },
+    "metastoreName": {
+      "value": "<%= @metastoreName %>"
+    },
     "clusterWorkerNodeCount": {
       "value": <%= @clusterWorkerNodeCount %>
     },
