--- a/cookbooks/azure/templates/default/separatedhdi1.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi1.json.erb
@@ -155,6 +155,13 @@
         "KAP+KyAnalyzer",
         "KAP"
       ]
+    },
+    "metastoreName": {
+      "type": "string",
+      "defaultValue": "kylin_default_instance",
+      "metadata": {
+        "description": "The name of metadata store for KAP"
+      }
     }
   },
   "variables": {
