--- a/cookbooks/azure/templates/default/separatedhdi.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi.json.erb
@@ -329,7 +329,7 @@
               "minInstanceCount": 1,
               "targetInstanceCount": 3,
               "hardwareProfile": {
-                "vmSize": "Large"
+                "vmSize": "Standard_D3_V2"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
