Updating separatedhdi template to connect to the second sa

--- a/cookbooks/azure/templates/default/separatedhdi.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi.parameters.json.erb
@@ -50,8 +50,11 @@
     "subnet1Name": {
       "value": "<%= @subnet1Name %>"
     },
-    "storageAccount": {
-      "value": "<%= @storageAccount %>"
+    "storageAccount1": {
+      "value": "<%= @storageAccount1 %>"
+    },
+    "storageAccount2": {
+      "value": "<%= @storageAccount2 %>"
     }
   }
 }
