--- a/cookbooks/azure/templates/default/separatedhdi.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi.parameters.json.erb
@@ -17,6 +17,9 @@
     "containerName": {
       "value": "<%= @containerName %>"
     },
+    "databaseName": {
+      "value": "<%= @databaseName %>"
+    },
     "edgeNodeSize": {
       "value": "<%= @edgeNodeSize %>"
     },
