--- a/cookbooks/azure/templates/default/deploywithcluster.parameters.json.erb
+++ b/cookbooks/azure/templates/default/deploywithcluster.parameters.json.erb
@@ -43,6 +43,9 @@
     },
     "storageAccount": {
       "value": "<%= @storageAccount %>"
+    },
+    "kaptoken": {
+      "value": "<%= @kaptoken %>"
     }
   }
 }
