--- a/cookbooks/azure/templates/default/separatedhdi.parameters.json.erb
+++ b/cookbooks/azure/templates/default/separatedhdi.parameters.json.erb
@@ -58,6 +58,9 @@
     },
     "storageAccount2": {
       "value": "<%= @storageAccount2 %>"
+    },
+    "kaptoken": {
+      "value": "<%= @kaptoken %>"
     }
   }
 }
