--- a/cookbooks/kap/templates/default/sqlserver.parameters.json.erb
+++ b/cookbooks/kap/templates/default/sqlserver.parameters.json.erb
@@ -6,22 +6,7 @@
       "value": "<%= @sqlvirtualMachinesname %>"
     },
     "sqlnetworkInterfacesname": {
-      "value": "<%= @sqlnetworkInterfacesname %>"
-    },
-    "sqlnetworkSecurityGroupsname": {
-      "value": "<%= @sqlnetworkSecurityGroupsname %>"
-    },
-    "sqlpublicIPAddressesipname": {
-      "value": "<%= @sqlpublicIPAddressesipname %>"
-    },
-    "vnetName": {
-      "value": "<%= @vnetName %>"
-    },
-    "subnet1Name": {
-      "value": "<%= @subnet1Name %>"
-    },
-    "subnet2Name": {
-      "value": "<%= @subnet2Name %>"
+      "value": "<%= @sqldatabaseName %>"
     },
     "adminUsername": {
       "value": "<%= @adminUsername %>"
