Updating sqldatabaseName in sqlserver template

--- a/cookbooks/kap/templates/default/sqlserver.parameters.json.erb
+++ b/cookbooks/kap/templates/default/sqlserver.parameters.json.erb
@@ -5,7 +5,7 @@
     "sqlvirtualMachinesname": {
       "value": "<%= @sqlvirtualMachinesname %>"
     },
-    "sqlnetworkInterfacesname": {
+    "sqldatabaseName": {
       "value": "<%= @sqldatabaseName %>"
     },
     "adminUsername": {
