--- a/cookbooks/kap/templates/default/deploywithcluster.json.erb
+++ b/cookbooks/kap/templates/default/deploywithcluster.json.erb
@@ -358,6 +358,7 @@
           {
             "subDomainSuffix": "kap",
             "destinationPort": 7070,
+            "disableGatewayAuth":true,
             "accessModes": [
               "webpage"
             ]
@@ -365,6 +366,7 @@
           {
             "subDomainSuffix": "kya",
             "destinationPort": 8080,
+            "disableGatewayAuth":true,
             "accessModes": [
               "webpage"
             ]
@@ -372,6 +374,7 @@
           {
             "subDomainSuffix": "zep",
             "destinationPort": 9090,
+            "disableGatewayAuth":true,
             "accessModes": [
               "webpage"
             ]
