--- a/cookbooks/kap/templates/default/separatedhdi.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.json.erb
@@ -428,6 +428,7 @@
           {
             "subDomainSuffix": "kap",
             "destinationPort": 7070,
+            "disableGatewayAuth":true,
             "accessModes": [
               "webpage"
             ]
@@ -435,6 +436,7 @@
           {
             "subDomainSuffix": "kya",
             "destinationPort": 8080,
+            "disableGatewayAuth":true,
             "accessModes": [
               "webpage"
             ]
@@ -442,6 +444,7 @@
           {
             "subDomainSuffix": "zep",
             "destinationPort": 9090,
+            "disableGatewayAuth":true,
             "accessModes": [
               "webpage"
             ]
