--- a/cookbooks/kap/templates/default/separatedhdi.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.json.erb
@@ -345,7 +345,7 @@
             {
               "name": "workernode",
               "minInstanceCount": 1,
-              "targetInstanceCount": 4,
+              "targetInstanceCount": "[parameters('clusterWorkerNodeCount')]",
               "hardwareProfile": {
                 "vmSize": "Standard_D3_V2"
               },
