--- a/cookbooks/kap/templates/default/deploywithcluster.parameters.json.erb
+++ b/cookbooks/kap/templates/default/deploywithcluster.parameters.json.erb
@@ -46,6 +46,9 @@
     },
     "kaptoken": {
       "value": "<%= @kaptoken %>"
+    },
+    "kapagentid": {
+      "value": "<%= @kapagentid %>"
     }
   }
 }
