--- a/cookbooks/kap/templates/default/separatedhdi.parameters.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.parameters.json.erb
@@ -61,6 +61,9 @@
     },
     "kaptoken": {
       "value": "<%= @kaptoken %>"
+    },
+    "kapagentid": {
+      "value": "<%= @kapagentid %>"
     }
   }
 }
