--- a/cookbooks/kap/templates/default/singlehdi.parameters.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.parameters.json.erb
@@ -58,6 +58,9 @@
     },
     "kaptoken": {
       "value": "<%= @kaptoken %>"
+    },
+    "kapagentid": {
+      "value": "<%= @kapagentid %>"
     }
   }
 }
