--- a/cookbooks/kap/templates/default/deploywithcluster.json.erb
+++ b/cookbooks/kap/templates/default/deploywithcluster.json.erb
@@ -160,6 +160,13 @@
       "metadata": {
         "description": "kap token to be put into installation script"
       }
+    },
+    "kapagentid": {
+      "type": "string",
+      "defaultValue": "",
+      "metadata": {
+        "description": "kap agent Id for each kap node"
+      }
     }
   },
   "variables": {
@@ -338,7 +345,7 @@
           {
             "name": "[concat('KAP-install-v0','-' ,uniquestring(variables('applicationName')))]",
             "uri": "https://raw.githubusercontent.com/Kyligence/Iaas-Applications/master/KAP/scripts/KAP-install_v0.sh",
-            "parameters": "[concat(parameters('clusterLoginUserName'), ' ', parameters('clusterLoginPassword'), ' ', parameters('metastoreName'), ' ', parameters('appType'), ' ', parameters('clusterName'), ' ', parameters('kaptoken'))]",
+            "parameters": "[concat(parameters('clusterLoginUserName'), ' ', parameters('clusterLoginPassword'), ' ', parameters('metastoreName'), ' ', parameters('appType'), ' ', parameters('clusterName'), ' ', parameters('kaptoken'), ' ', parameters('kapagentid'))]",
             "roles": [
               "edgenode"
             ]
