--- a/cookbooks/kap/templates/default/separatedhdi.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.json.erb
@@ -181,6 +181,13 @@
       "metadata": {
         "description": "kap token to be put into installation script"
       }
+    },
+    "kapagentid": {
+      "type": "string",
+      "defaultValue": "",
+      "metadata": {
+        "description": "kap agent id to be put into installation script"
+      }
     }
   },
   "variables": {
@@ -408,7 +415,7 @@
           {
             "name": "[concat('KAP-install-v0','-' ,uniquestring(variables('applicationName')))]",
             "uri": "https://raw.githubusercontent.com/Kyligence/Iaas-Applications/master/KAP/scripts/KAP-install_v0.sh",
-            "parameters": "[concat(parameters('clusterLoginUserName'), ' ', parameters('clusterLoginPassword'), ' ', parameters('metastoreName'), ' ', parameters('appType'), ' ', parameters('clusterName'), ' ', parameters('kaptoken'))]",
+            "parameters": "[concat(parameters('clusterLoginUserName'), ' ', parameters('clusterLoginPassword'), ' ', parameters('metastoreName'), ' ', parameters('appType'), ' ', parameters('clusterName'), ' ', parameters('kaptoken'), ' ', parameters('kapagentid'))]",
             "roles": [
               "edgenode"
             ]
