--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -736,7 +736,7 @@
                       {
                         "Ref": "kyaccountToken"
                       },
-                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb",
+                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
                       "sed -i \"s/KAPAGENTID/",
                       {
                         "Ref": "kapagentid"
